Fix dark mode not cover entire page

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,6 +54,10 @@
   padding: 3vw 2vw;
 }
 
+.app-frame {
+  height: 100%;
+}
+
 input {
   font-size: 12px;
 }
